# beginnings

./: .gitignore  CLAUDE.md  gitleaks-results-phase4.json  semgrep-results-final.json  semgrep-results-phase4.json  semgrep-results.json
beginnings/: README.md  debug_rate_limit.py  gitleaks-phase3-results.json  gitleaks-stage1.json  gitleaks-stage2.json  pyproject.toml  semgrep-cli-results.json  semgrep-phase3-results.json  semgrep-results-final.json  semgrep-stage1.json  semgrep-stage2.json
beginnings/beginnings-test/test-project/: .env.example  .gitignore  README.md  main.py  pyproject.toml
beginnings/beginnings-test/test-project/config/: app.dev.yaml  app.yaml
beginnings/beginnings-test/test-project/routes/: __init__.py  html.py
beginnings/beginnings-test/test-project/static/css/: style.css
beginnings/beginnings-test/test-project/templates/: index.html
beginnings/beginnings-test/test-project/tests/: __init__.py  conftest.py  test_routes.py
beginnings/beginnings-test/test_extension/: README.md  __init__.py  extension.py  pyproject.toml
beginnings/beginnings-test/test_extension/docs/: configuration.md  user_guide.md
beginnings/beginnings-test/test_extension/tests/: conftest.py  test_test_extension.py
beginnings/config/: app.yaml
beginnings/docs/: README.md  api-reference.md  configuration.md  extension-development.md  performance.md  troubleshooting.md
beginnings/examples/: README_Enhanced.md  blog_app.py  microservice_api.py  microservice_api_enhanced.py  mixed_webapp.py  mixed_webapp_enhanced.py
beginnings/examples/blog_demo/: app.py  app_enhanced.py  blog_config.yaml  database.py
beginnings/examples/blog_demo/static/css/: style.css
beginnings/examples/blog_demo/templates/: about.html  about_enhanced.html  base.html  base_enhanced.html  home.html  login.html  login_enhanced.html  new_post.html  new_post_enhanced.html  post.html  register.html
beginnings/examples/templates/: base.html  landing.html  login.html
beginnings/src/beginnings/: __init__.py
beginnings/src/beginnings/alerting/: __init__.py  alert_manager.py  enums.py  exceptions.py  models.py  notification_manager.py
beginnings/src/beginnings/cli/: __init__.py  main.py
beginnings/src/beginnings/cli/commands/: __init__.py  config.py  deploy.py  docs.py  extension.py  migrate.py  new.py  run.py
beginnings/src/beginnings/cli/debug/: __init__.py  bottleneck_detector.py  config.py  dashboard.py  extension.py  logs.py  (+8 more)
beginnings/src/beginnings/community/: __init__.py  contribution_manager.py  quality_validator.py  standards.py
beginnings/src/beginnings/config/: __init__.py  enhanced_loader.py  environment.py  loader.py  route_resolver.py  validator.py
beginnings/src/beginnings/core/: __init__.py  app.py  errors.py
beginnings/src/beginnings/deployment/: __init__.py  cloud.py  config.py  container.py  exceptions.py  kubernetes.py  results.py
beginnings/src/beginnings/docs/: __init__.py  extractors.py  generator.py  parsers.py  renderers.py  templates.py  utils.py
beginnings/src/beginnings/extensions/: __init__.py  base.py  loader.py
beginnings/src/beginnings/logging/: __init__.py  enums.py  exceptions.py  log_aggregator.py  log_analyzer.py  log_manager.py  log_processor.py  models.py
beginnings/src/beginnings/migration/: __init__.py  base.py  code.py  config.py  database.py  framework.py  registry.py  runner.py  utils.py
beginnings/src/beginnings/monitoring/: __init__.py  config.py  exceptions.py  health.py  health_manager.py  logger.py  metrics.py  metrics_collector.py  performance.py  system.py
beginnings/src/beginnings/production/: __init__.py  config.py  environment.py  exceptions.py  secrets.py  validation.py
beginnings/src/beginnings/routing/: __init__.py  api.py  cors.py  html.py  middleware.py  static.py  templates.py
beginnings/src/beginnings/testing/: __init__.py  assertions.py  benchmarks.py  extension_test.py  fixtures.py  mocks.py  runners.py
beginnings/tests/: test_alerting_logging.py  test_community_standards.py  test_complete_framework_demo.py  test_core.py  test_cors.py  test_deployment_tools.py  test_docs_integration.py  test_docs_parsers.py  test_docs_renderers.py  test_docs_utils.py  test_e2e_requests.py  test_end_to_end_workflows.py  test_framework_integration.py  test_integration_workflow.py  test_migration_framework_integration.py  test_migration_system.py  test_monitoring_system.py  test_phase2_integration.py  test_phase4_integration_performance.py  test_production_utilities.py  test_public_api.py  test_security_performance.py  test_static_files.py  test_template_engine.py  test_validation_framework.py  test_verification_tools.py
beginnings/tests/cli/: test_advanced_debugging.py  test_auto_reload.py  test_cli_edge_cases.py  test_cli_integration.py  test_config_management.py  test_debug_dashboard.py  test_docs_commands.py  test_extension_scaffolding.py  test_framework.py  test_framework_migration.py  test_performance_optimization.py  test_phase3_integration.py  test_scaffolding.py  test_security.py
beginnings/tests/config/: test_enhanced_loader.py  test_environment.py  test_loader.py  test_route_resolver.py  test_validator.py
beginnings/tests/docs/: test_content_validation.py  test_documentation_website.py  test_interactive_features.py
beginnings/tests/extensions/: __init__.py  test_loader.py  test_middleware_chain.py
beginnings/tests/extensions/auth/: __init__.py  test_auth_extension.py  test_jwt_provider.py  test_oauth.py  test_rbac.py  test_sessions.py
beginnings/tests/extensions/csrf/: __init__.py  test_ajax.py  test_csrf_tokens.py  test_templates.py
beginnings/tests/extensions/rate_limiting/: test_algorithms.py  test_storage.py
beginnings/tests/extensions/security_headers/: __init__.py  test_cors.py  test_csp.py  test_headers.py
beginnings/tests/migration/: test_code_conversion.py  test_dependency_migration.py  test_migration_framework.py  test_migration_system.py
beginnings/tests/routing/: __init__.py  test_routers.py
beginnings/tests/testing/: conftest.py  test_extension_benchmarks.py  test_extension_testing.py
(+103 files in other folders)
