[project]
name = "{{ project_name }}"
version = "0.1.0"
description = "A beginnings web application"
dependencies = [
    "beginnings",
    "uvicorn[standard]>=0.24.0",
    {% if include_auth %}
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    {% endif %}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"